syntax = "proto3";

import "google/protobuf/empty.proto";

package weather;

////////////////////////////////////// The greeting service definition.
service WeatherService {
  rpc GetWeatherByCityName (WeatherRequestByName) returns (WeatherReply) {}
  rpc GetWeathersByCityName (WeatherRequestByName) returns (stream WeatherReply) {}
  rpc GetAllWeathers (google.protobuf.Empty) returns (stream WeatherReply) {}
}

message WeatherRequestByName {
  string name = 1;
}

message WeatherReply {
  string name = 1;
  int64 dt = 2;
  Main main = 3;
  repeated Weather weather = 4;
  Clouds clouds = 5;
  Sys sys = 6;
  int32 timezone = 7;
}

message Main {
  double temp = 1;
  double feelsLike = 2;
  double tempMin = 3;
  double tempMax = 4;
}

message Weather {
  string main = 1;
  string description = 2;
}

message Clouds {
  int32 all = 1;
}

message Sys {
  string country = 1;
  int64 sunrise = 2;
  int64 sunset = 3;
}

